# advanced-cross-logger

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
bindings/go/: README.md  cross_logger.pc.in  go.mod  logger.go
bindings/go/rust-go/: Cargo.toml
bindings/go/rust-go/src/: lib.rs
bindings/java/: README.md  pom.xml
bindings/java/rust-jni/: Cargo.toml
bindings/java/rust-jni/src/: lib.rs
bindings/java/src/main/java/com/crosslogger/: CrossLogger.java  LogLevel.java  LoggerConfig.java
bindings/node/: Cargo.toml  README.md  index.d.ts  index.darwin-arm64.node  index.js  index.mjs  package-lock.json  package.json
bindings/node/src/: lib.rs
bindings/python/: Cargo.toml  README.md  pyproject.toml
bindings/python/cross_logger/: __init__.py
bindings/python/src/: lib.rs
core/: Cargo.toml
core/examples/: demo.rs
core/src/: lib.rs
examples/go/: README.md  go.mod  main.go
examples/java/: README.md  pom.xml
examples/java/src/main/java/: Main.java
examples/node/: README.md  index.js  index.ts  package-lock.json  package.json  tsconfig.json
examples/python/: README.md  main.py  requirements.txt
scripts/: run-example.sh
scripts/publish/: go.sh  java.sh  node.sh  python.sh
